stack/cloudformation/machines.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Jobs stack

# Mappings
# based on https://s3.amazonaws.com/coreos.com/dist/aws/coreos-beta-hvm.template

Mappings:
  RegionMap:
    eu-central-1:
      ami: ami-da4f7dc7
    ap-northeast-1:
      ami: ami-7dfc1c7d
    sa-east-1:
      ami: ami-75972968
    ap-southeast-2:
      ami: ami-09027433
    ap-southeast-1:
      ami: ami-56053104
    us-east-1:
      ami: ami-e0efb888
    us-west-2:
      ami: ami-a387a093
    us-west-1:
      ami: ami-b8958ffd
    eu-west-1:
      ami: ami-e524b192

# Parameters

Parameters:
  ClusterSize:
    Description: Number of nodes in your cluster
    Type: Number
    Default: 1
    MinValue: 1

  DiscoveryURL:
    Description: An unique etcd cluster discovery URL. Grab a new token from https://discovery.etcd.io/new
    Type: String

  KeyPair:
    Description: The name of an existing EC2 Key Pair to allow SSH access to the instance.
    Type: String

# Resources

Resources:
  CoreOSAccessKey:
    Type: AWS::IAM::AccessKey
    Properties:
      UserName:
        Ref: CoreOSUser

  CoreOSUser:
    Type: AWS::IAM::User

  CoreOSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Jobs
      SecurityGroupIngress:
        # ssh
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        # http
        - FromPort: 80
          ToPort: 80
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0

  EtcdIngress4001:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupName: 
        Ref: CoreOSSecurityGroup
      IpProtocol: tcp
      FromPort: 4001
      ToPort: 4001
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - CoreOSSecurityGroup
          - GroupId

  EtcdIngress7001:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupName: 
        Ref: CoreOSSecurityGroup
      IpProtocol: tcp
      FromPort: 7001
      ToPort: 7001
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - CoreOSSecurityGroup
          - GroupId

  RedisIngress6379:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupName: 
        Ref: CoreOSSecurityGroup
      IpProtocol: tcp
      FromPort: 6379
      ToPort: 6379
      SourceSecurityGroupId:
        'Fn::GetAtt':
          - CoreOSSecurityGroup
          - GroupId

  CoreOSServerAutoScale:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones:
        "Fn::GetAZs":
          Ref: "AWS::Region"
      LaunchConfigurationName:
        Ref: CoreOSServerLaunchConfig
      MinSize: 1
      MaxSize: 10
      DesiredCapacity:
        Ref: ClusterSize
      Tags:
        - Key: Name
          Value:
            Ref: "AWS::StackName"
          PropagateAtLaunch: true

  CoreOSServerLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId:
        "Fn::FindInMap":
          - RegionMap
          - Ref: AWS::Region
          - ami
      InstanceType: t2.micro
      KeyName:
        Ref: KeyPair
      SecurityGroups:
        - Ref: CoreOSSecurityGroup
      UserData:
        "Fn::Base64":
          "Fn::Join":
            - ""
            -
              - |-
{cloud_config}
              - Ref: DiscoveryURL
